syntax = "proto3";

import "google/protobuf/empty.proto";
package proto;
option go_package = "grpc_kvstore/proto";

// The exposed service
service KVStore {
  // Add key to the store;
  // google.protobuf.empty is just an empty struct -> for when you don't want to return a value
  rpc Put(PutArgs) returns(google.protobuf.Empty);

  // Retrieve value from server, raises an error if it doesn't exist
  rpc Get(GetArgs) returns (GetResponse);
}

message PutArgs {
  string key = 1;
  string value = 2;
}

message GetArgs {
  string key = 1;
}

message GetResponse {
  string value = 1;
}
